Fix design on mobile

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -65,7 +65,7 @@ img {
     font-family: var(--font-default);
 }
 
-.topnav a:hover {
+.topnav a:not(.logo-link, .icon):hover {
     background-color: #ff0000;
     color: #ffffff;
     border-radius: 8px;
@@ -82,6 +82,10 @@ img {
 }
 
 .topnav .icon {
+    display: none;
+}
+
+.mobile-img {
     display: none;
 }
 
@@ -499,10 +503,17 @@ footer {
 /* MOBILE BREAKPOINT */
 
 @media screen and (max-width: 768px) {
+    img {
+        padding: 0;
+    }
+    main {
+        padding-inline: 2rem;
+    }
 	/* #### NAVBAR #### */
 	.topnav {
 		justify-content: center;
 		flex-flow: column wrap;
+        padding: 33px 30px;
 	}
 	.topnav .header-logo {
 		width: 100%;;
@@ -511,7 +522,14 @@ footer {
 
 	.topnav .icon {
 		display: block;
+        height: max-content;
+        color: #f00;
 	}
+
+    .topnav .icon:hover {
+        cursor: pointer;
+    }
+
 	.main-navbar {
 		display: none;
 	}
@@ -534,7 +552,7 @@ footer {
 		flex-flow: column wrap;
         background: #fff;
         color: #000;
-        padding: 20px;
+        padding: 0;
 		overflow-wrap: break-word;
 		min-width: unset;
     }
@@ -550,12 +568,23 @@ footer {
 		width: 100%;
     }
 	.hero-img {
-		padding: 1rem;
+		display: none;
 	}
-    .hero-img img {
-        border-radius: 10px;
+
+    .mobile-img {
+        display: block;
+        width: 100%;
+        height: 100%;
         margin-top: 40px;
     }
+
+    .mobile-img img {
+        height: 100%;
+        width: 100%;
+        border-radius: 8px;
+        object-fit: cover;
+    }
+
     .copyrights {
         margin-top: 50px;
         text-align: center;
